# QDeconz2MQTT

./: CMakeLists.txt  README.md
res/: qdeconz2mqtt.ini  qdeconz2mqtt.service
src/: deconz2mqttconfig.cpp  deconz2mqttconfig.h  main.cpp  mqtthandler.cpp  mqtthandler.h  websocketclient.cpp  websocketclient.h
